-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: core-svc
-
None
Parsing "/proc/self/stat" by simply breaking the line on spaces will fall down if the executable name contains spaces.
This is a problem in src/jdk.management/unix/native/libmanagement_ext/OperatingSystemImpl.c where the committed virtual memory size (shown by OperatingSystem MXBean) is extracted. An exec name with a space means we return the wrong value.
UnixOperatingSystem.c / vread_statdata() does better, it uses strrchr() to find the last occurring ')'.
This is a problem in src/jdk.management/unix/native/libmanagement_ext/OperatingSystemImpl.c where the committed virtual memory size (shown by OperatingSystem MXBean) is extracted. An exec name with a space means we return the wrong value.
UnixOperatingSystem.c / vread_statdata() does better, it uses strrchr() to find the last occurring ')'.