8299665: /proc/self/stat parsing in libmanagement broken by execname with spaces